--- a/app/views/births/multipleBirths/submitChild2/confirmation-page-child2.html
+++ b/app/views/births/multipleBirths/submitChild2/confirmation-page-child2.html
@@ -36,7 +36,7 @@
       </p> 
 
       <p  class="govuk-body">
-        <a href="../../../01-life-event-home.html">
+        <a href="../00-service-selector.html">
           Return to homepage
         </a>
       </p>
