--- a/app/views/births/multipleBirths/tasks/child2index.html
+++ b/app/views/births/multipleBirths/tasks/child2index.html
@@ -13,16 +13,17 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
     <h1 class="govuk-heading-l">Birth registration</h1>
     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Child 2 details</h2>
     <ul class="govuk-task-list">
-      
+
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/child2Details/02-child2-place-of-birth.html">
+          <a class="govuk-link govuk-task-list__link"
+            href="/births/multipleBirths/child2Details/02-child2-place-of-birth.html">
             Place of birth
           </a>
         </div>
         <div class="govuk-task-list__status">
-          {% if data.placeCompleted %}
+          {% if data.child2PlaceCompleted %}
           Completed
           {% else %}
           <strong class="govuk-tag govuk-tag--pink">Review</strong>
@@ -32,12 +33,13 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/child2Details/01-child2-name-date.html">
+          <a class="govuk-link govuk-task-list__link"
+            href="/births/multipleBirths/child2Details/01-child2-name-date.html">
             Name, date of birth and sex
           </a>
         </div>
         <div class="govuk-task-list__status">
-          {% if data.nameDateCompleted %}
+          {% if data.child2NameDateCompleted %}
           Completed
           {% else %}
           <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
@@ -47,15 +49,16 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
     </ul>
 
     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Parents' details</h2>
-     <ul class="govuk-task-list">
+    <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/parentsDetailsChild2/mothers-name-child2">
+          <a class="govuk-link govuk-task-list__link"
+            href="/births/multipleBirths/parentsDetailsChild2/mothers-name-child2">
             Mother's names
           </a>
         </div>
         <div class="govuk-task-list__status">
-          {% if data.mothersNameCompleted %}
+          {% if data.child2MothersNameCompleted %}
           Completed
           {% else %}
           <strong class="govuk-tag govuk-tag--pink">Review</strong>
@@ -65,26 +68,28 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/parentsDetailsChild2/mothers-details-child2">
+          <a class="govuk-link govuk-task-list__link"
+            href="/births/multipleBirths/parentsDetailsChild2/mothers-details-child2">
             Mother's details
           </a>
         </div>
         <div class="govuk-task-list__status">
-           {% if data.mothersDetailsCompleted %}
+          {% if data.child2MothersDetailsCompleted %}
           Completed
           {% else %}
           <strong class="govuk-tag govuk-tag--pink">Review</strong>
           {% endif %}
         </div>
       </li>
-       <li class="govuk-task-list__item">
+      <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/parentsDetailsChild2/fathers-name-child2">
+          <a class="govuk-link govuk-task-list__link"
+            href="/births/multipleBirths/parentsDetailsChild2/fathers-name-child2">
             Father's names
           </a>
         </div>
         <div class="govuk-task-list__status">
-          {% if data.fathersNameCompleted %}
+          {% if data.child2FathersNameCompleted %}
           Completed
           {% else %}
           <strong class="govuk-tag govuk-tag--pink">Review</strong>
@@ -94,12 +99,13 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/parentsDetailsChild2/fathers-details-child2">
+          <a class="govuk-link govuk-task-list__link"
+            href="/births/multipleBirths/parentsDetailsChild2/fathers-details-child2">
             Father's details
           </a>
         </div>
         <div class="govuk-task-list__status">
-           {% if data.fathersDetailsCompleted %}
+          {% if data.child2FathersDetailsCompleted %}
           Completed
           {% else %}
           <strong class="govuk-tag govuk-tag--pink">Review</strong>
@@ -109,7 +115,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
     </ul>
 
     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Statistics</h2>
-     <ul class="govuk-task-list">
+    <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/statsChild2/confidentialChild2.html">
@@ -117,7 +123,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           </a>
         </div>
         <div class="govuk-task-list__status">
-          {% if data.statsConfidentialCompleted %}
+          {% if data.child2StatsConfidentialCompleted %}
           Completed
           {% else %}
           <strong class="govuk-tag govuk-tag--pink">Review</strong>
@@ -132,76 +138,77 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           </a>
         </div>
         <div class="govuk-task-list__status">
-           {% if data.statsVoluntaryCompleted %}
+          {% if data.child2StatsVoluntaryCompleted %}
           Completed
           {% else %}
           <strong class="govuk-tag govuk-tag--pink">Review</strong>
           {% endif %}
         </div>
       </li>
-      </ul>
+    </ul>
 
-      <h2 class="govuk-heading-m">Additional information</h2>
-       <ul class="govuk-task-list">
-         <li class="govuk-task-list__item">
+    <h2 class="govuk-heading-m">Additional information</h2>
+    <ul class="govuk-task-list">
+      <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/additionalInfoChild2/commentsChild2">
-            Comments</a> 
+            Comments</a>
         </div>
         <div class="govuk-task-list__status">
-            <strong class="govuk-tag govuk-tag--yellow">Optional</strong>
+          <strong class="govuk-tag govuk-tag--yellow">Optional</strong>
         </div>
       </li>
-       </ul>
+    </ul>
 
     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Submit the registration</h2>
-     <ul class="govuk-task-list">
+    <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint govuk-!-width-two-thirds">
-          {% if not (data.statsConfidentialCompleted) %}
+          {% if not (data.child2StatsConfidentialCompleted) %}
           <div class="govuk-task-list__hint ">
             Registrar's details
           </div>
-           {% else %}
- <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/submitChild2/register-page-child2">
+          {% else %}
+          <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/submitChild2/register-page-child2">
             Registrar's details
           </a>
-           {% endif %}
+          {% endif %}
         </div>
-        
-<div class="govuk-task-list__status">
-      {% if not data.statsConfidentialCompleted %}
-        <strong class="govuk-tag govuk-tag--grey">Cannot start yet</strong>
-      {% elif data.statsConfidentialCompleted and not data.registerPageCompleted %}
-        <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
-      {% elif data.registerPageCompleted %}
-        Completed
-      {% endif %}
-    </div>
+
+        <div class="govuk-task-list__status">
+          {% if not data.child2StatsConfidentialCompleted %}
+          <strong class="govuk-tag govuk-tag--grey">Cannot start yet</strong>
+          {% elif data.child2StatsConfidentialCompleted and not data.child2RegisterPageCompleted %}
+          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
+          {% elif data.child2RegisterPageCompleted %}
+          Completed
+          {% endif %}
+        </div>
 
       </li>
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint govuk-!-width-two-thirds">
           <div class="govuk-task-list__hint ">
-{% if not (data.registerPageCompleted) %}
-          <div class="govuk-task-list__hint ">
-            Check your answers
-          </div>
-           {% else %}
- <a class="govuk-link govuk-task-list__link" href="/births/multipleBirths/submitChild2/check-answers-page-child2">
-            Check your answers
-          </a>
-           {% endif %}
+            {% if not (data.child2RegisterPageCompleted) %}
+            <div class="govuk-task-list__hint ">
+              Check your answers
+            </div>
+            {% else %}
+            <a class="govuk-link govuk-task-list__link"
+              href="/births/multipleBirths/submitChild2/check-answers-page-child2">
+              Check your answers
+            </a>
+            {% endif %}
           </div>
         </div>
         <div class="govuk-task-list__status">
-           {% if not data.registerPageCompleted %}
-        <strong class="govuk-tag govuk-tag--grey">Cannot start yet</strong>
-      {% elif data.registerPageCompleted and not data.checkAnswersCompleted %}
-        <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
-      {% elif data.registerPageCompleted %}
-        Completed
-      {% endif %}
+          {% if not data.child2RegisterPageCompleted %}
+          <strong class="govuk-tag govuk-tag--grey">Cannot start yet</strong>
+          {% elif data.child2RegisterPageCompleted and not data.child2CheckAnswersCompleted %}
+          <strong class="govuk-tag govuk-tag--blue">Incomplete</strong>
+          {% elif data.child2RegisterPageCompleted %}
+          Completed
+          {% endif %}
         </div>
       </li>
     </ul>
@@ -210,6 +217,6 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <p><a href="#" class="govuk-link" style="color: #d4351c;">Delete record</a></p>
-    </div>
+  </div>
 </div>
 {% endblock %}
