--- a/app/views/births/multipleBirths/child2Details/02-child2-place-of-birth.html
+++ b/app/views/births/multipleBirths/child2Details/02-child2-place-of-birth.html
@@ -2,61 +2,61 @@
 
 
 {% block pageScripts %}
-  <script src="/public/javascripts/application.js"></script>
+<script src="/public/javascripts/application.js"></script>
 {% endblock %}
 
 {% block pageTitle %}
-   Child's place of birth – GOV.UK Prototype Kit
+Child's place of birth – GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:window.history.back()"
-  }) }}
+{{ govukBackLink({
+text: "Back",
+href: "javascript:window.history.back()"
+}) }}
 {% endblock %}
 
 {% block content %}
 
-{% if data['declaration-change'] == 'true' %}
-  <form class="form" action="../declaration/declaration" method="post">
-{% else %}
-<form class="form" action="check-details" method="post">
-{% endif %}
+<form class="form" action="place-check" method="post">
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
       <span class="govuk-caption-xl">Child 2 details</span>
       <h1 class="govuk-heading-xl">
-       Place of birth
+        Place of birth
       </h1>
-        
+
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           </legend>
           <div class="govuk-radios" data-module="govuk-radios">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england" checked>
+              <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england"
+                {% if data['child2-whereDoYouLive']=='england' %}checked{% endif %}>
               <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
                 Communal establishment
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="scotland">
+              <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio"
+                value="scotland" {% if data['child2-whereDoYouLive']=='scotland' %}checked{% endif %}>
               <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
                 Home
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="whereDoYouLive-3" name="whereDoYouLive" type="radio" value="wales">
+              <input class="govuk-radios__input" id="whereDoYouLive-3" name="whereDoYouLive" type="radio" value="wales"
+                {% if data['child2-whereDoYouLive']=='wales' %}checked{% endif %}>
               <label class="govuk-label govuk-radios__label" for="whereDoYouLive-3">
                 In transit
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="whereDoYouLive-4" name="whereDoYouLive" type="radio" value="northern-ireland">
+              <input class="govuk-radios__input" id="whereDoYouLive-4" name="whereDoYouLive" type="radio"
+                value="northern-ireland" {% if data['child2-whereDoYouLive']=='northern-ireland' %}checked{% endif %}>
               <label class="govuk-label govuk-radios__label" for="whereDoYouLive-4">
                 Elsewhere
               </label>
@@ -75,49 +75,57 @@
           <label class="govuk-label" for="address-line-1">
             Flat number or name
           </label>
-          <input class="govuk-input govuk-!-width-two-thirds" id="address-line-1" name="addressLine1" type="text" autocomplete="address-line1">
+          <input class="govuk-input govuk-!-width-two-thirds" id="address-line-1" name="addressLine1" type="text"
+            autocomplete="address-line1">
         </div>
         <div class="govuk-form-group">
           <label class="govuk-label" for="address-line-2">
             Building number
           </label>
-          <input class="govuk-input govuk-!-width-two-thirds" id="address-line-2" name="addressLine2" type="text" autocomplete="address-line2">
+          <input class="govuk-input govuk-!-width-two-thirds" id="address-line-2" name="addressLine2" type="text"
+            autocomplete="address-line2">
         </div>
         <div class="govuk-form-group">
           <label class="govuk-label" for="address-town">
             Building name
           </label>
-          <input class="govuk-input govuk-!-width-two-thirds" id="address-town" name="addressTown" type="text" autocomplete="address-level2" value="Princess Anne Hospital">
+          <input class="govuk-input govuk-!-width-two-thirds" id="address-town" name="addressTown" type="text"
+            autocomplete="address-level2" value="Princess Anne Hospital">
         </div>
         <div class="govuk-form-group">
           <label class="govuk-label" for="address-county">
             Street address line 1
           </label>
-          <input class="govuk-input govuk-!-width-two-thirds" id="address-county" name="addressCounty" type="text" value="Coxford Road">
+          <input class="govuk-input govuk-!-width-two-thirds" id="address-county" name="addressCounty" type="text"
+            value="Coxford Road">
         </div>
         <div class="govuk-form-group">
           <label class="govuk-label" for="address-line-1">
             Street address line 2
           </label>
-          <input class="govuk-input govuk-!-width-two-thirds" id="address-line-1" name="addressLine1" type="text" autocomplete="address-line1">
+          <input class="govuk-input govuk-!-width-two-thirds" id="address-line-1" name="addressLine1" type="text"
+            autocomplete="address-line1">
         </div>
         <div class="govuk-form-group">
           <label class="govuk-label" for="address-line-2">
             Street address line 3
           </label>
-          <input class="govuk-input govuk-!-width-two-thirds" id="address-line-2" name="addressLine2" type="text" autocomplete="address-line2">
+          <input class="govuk-input govuk-!-width-two-thirds" id="address-line-2" name="addressLine2" type="text"
+            autocomplete="address-line2">
         </div>
         <div class="govuk-form-group">
           <label class="govuk-label" for="address-town">
             Street address line 4
           </label>
-          <input class="govuk-input govuk-!-width-two-thirds" id="address-town" name="addressTown" type="text" autocomplete="address-level2">
+          <input class="govuk-input govuk-!-width-two-thirds" id="address-town" name="addressTown" type="text"
+            autocomplete="address-level2">
         </div>
         <div class="govuk-form-group">
           <label class="govuk-label" for="address-county">
             Town or city
           </label>
-          <input class="govuk-input govuk-!-width-two-thirds" id="address-county" name="addressCounty" type="text" value="Southampton">
+          <input class="govuk-input govuk-!-width-two-thirds" id="address-county" name="addressCounty" type="text"
+            value="Southampton">
         </div>
         <div class="govuk-form-group">
           <label class="govuk-label" for="address-county">
@@ -129,27 +137,25 @@
           <label class="govuk-label" for="address-postcode">
             Postcode
           </label>
-          <input class="govuk-input govuk-input--width-10" id="address-postcode" name="addressPostcode" type="text" autocomplete="postal-code" value="SO16 5YA">
+          <input class="govuk-input govuk-input--width-10" id="address-postcode" name="addressPostcode" type="text"
+            autocomplete="postal-code" value="SO16 5YA">
         </div>
         <p class="govuk-body">
           <a href="#" class="govuk-link govuk-link--no-visited-state">Search by postcode</a>
         </p>
         <br>
       </fieldset>
-      
-     
+
+
 
       {{ govukButton({
-        text: "Save and return",
-        href: "javascript:window.history.back()"
+      text: "Save and return"
       }) }}
-
-      
     </div>
 
 
   </div>
 
-</form>  
+</form>
 
 {% endblock %}
