--- a/app/views/births/multipleBirths/parentsDetailsChild2/fathers-name-child2.html
+++ b/app/views/births/multipleBirths/parentsDetailsChild2/fathers-name-child2.html
@@ -18,226 +18,194 @@ href: "javascript:window.history.back()"
 
 {% block content %}
 
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <span class="govuk-caption-l">Parents' details</span>
+    <h1 class="govuk-heading-l">
+      Father's names
+    </h1>
+
+    <form class="form" action="fathers-name-check" method="post">
 
 
 
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds">
- <span class="govuk-caption-l">Parents' details</span>
-        <h1 class="govuk-heading-l">
-          Father's names
-        </h1>
+      <!-- Conditional block: Yes -->
+      <div id="yes-name-block">
+        <div class="govuk-form-group">
+          <label class="govuk-label govuk-label--s" for="deceased-first-name">First name </label>
+          <input class="govuk-input govuk-!-width-one-half" id="deceased-first-name" name="fathersFirstName" type="text"
+            value="Pedro">
+        </div>
 
-        <form class="form" action="/births/v1/fathers-name-form" method="post">
-
-        
-
-          <!-- Conditional block: Yes -->
-          <div id="yes-name-block" >
-            <div class="govuk-form-group">
-              <label class="govuk-label govuk-label--s" for="deceased-first-name">First name </label>
-              <input class="govuk-input govuk-!-width-one-half" id="deceased-first-name" name="fathersFirstName"
-                type="text" value="Pedro">
-            </div>
-
-            <div class="govuk-form-group">
-              <label class="govuk-label govuk-label--s" for="deceased-middle-name">Middle names</label>
-              <input class="govuk-input govuk-!-width-one-half" id="deceased-middle-name" name="fathersMiddleName"
-                type="text" value="{{data['fathersMiddleName']}}">
-              <!-- <p class="govuk-body">
+        <div class="govuk-form-group">
+          <label class="govuk-label govuk-label--s" for="deceased-middle-name">Middle names</label>
+          <input class="govuk-input govuk-!-width-one-half" id="deceased-middle-name" name="fathersMiddleName"
+            type="text" value="{{data['fathersMiddleName']}}">
+          <!-- <p class="govuk-body">
                 <a href="#" class="govuk-link">Add more middle names</a>
               </p> -->
-            </div>
-
-            <div class="govuk-form-group">
-              <label class="govuk-label govuk-label--s" for="deceased-last-name">Last name</label>
-              <input class="govuk-input govuk-!-width-one-half" id="deceased-last-name" name="fathersLastName"
-                type="text" value="MORA">
-
-                 <p class="govuk-body  govuk-!-margin-top-4">
-                <a href="#" class="govuk-link">Add prefix or suffix</a>
-              </p>
-            </div>
-
-            <!-- <div class="govuk-form-group">
-              <fieldset class="govuk-fieldset">
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Capitalise last name?
-                </legend>
-                <div class="govuk-radios">
-                  <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio"
-                      id="capitaliseSurname-1" name="capitaliseSurname" value="YES" checked=""><label
-                      class="govuk-label govuk-radios__label" for="capitaliseSurname-1">Yes</label></div>
-                  <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio"
-                      id="capitaliseSurname-2" name="capitaliseSurname" value="NO"><label
-                      class="govuk-label govuk-radios__label" for="capitaliseSurname-2">No</label></div>
-                </div>
-              </fieldset>
-            </div> -->
-
-            <!-- <div class="govuk-form-group">
-              <label class="govuk-label govuk-label--s" for="prefix">
-                Maiden name
-              </label>
-              <input class="govuk-input govuk-!-width-three-quarters" id="prefix" name="prefix" type="text"
-                value="{{data['prefix']}}">
-            </div>
-
-            <div class="govuk-form-group">
-              <label class="govuk-label govuk-label--s" for="suffix">
-                Last name at marriage (if different from maiden name)
-              </label>
-              <input class="govuk-input govuk-!-width-three-quarters" id="suffix" name="suffix" type="text"
-                value="{{data['suffix']}}">
-            </div> -->
-
-          
-            <div class="govuk-form-group">
-  <fieldset class="govuk-fieldset" aria-describedby="name-order-hint">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-      Print order of names
-    </legend>
-    <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
-      
-      <!-- Default selected: Last name last -->
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="name-order" name="name-order" type="radio"
-               value="name-order-first-name" checked data-aria-controls="">
-        <label class="govuk-label govuk-radios__label" for="name-order">
-          Last name last
-        </label>
-      </div>
-
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="name-order-1" name="name-order" type="radio"
-               value="name-order-last-name" data-aria-controls="">
-        <label class="govuk-label govuk-radios__label" for="name-order-1">
-          Last name first
-        </label>
-      </div>
-
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="name-order-2" name="name-order" type="radio"
-               value="name-order-only-last" data-aria-controls="">
-        <label class="govuk-label govuk-radios__label" for="name-order-2">
-          Last name only
-        </label>
-      </div>
-
-      <!-- Conditional reveal: Other -->
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="name-order-4" name="name-order" type="radio"
-               value="name-order-other" data-aria-controls="conditional-name-order-other">
-        <label class="govuk-label govuk-radios__label" for="name-order-4">
-          Other
-        </label>
-      </div>
-
-      <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-name-order-other">
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="custom-order">
-            Order of names
-          </label>
-          <input class="govuk-input govuk-!-width-one-half" id="custom-order" name="custom-order" type="text"
-                 value="{{ data['custom-order'] }}">
         </div>
-      </div>
 
-    </div>
-  </fieldset>
-</div>
+        <div class="govuk-form-group">
+          <label class="govuk-label govuk-label--s" for="deceased-last-name">Last name</label>
+          <input class="govuk-input govuk-!-width-one-half" id="deceased-last-name" name="fathersLastName" type="text"
+            value="MORA">
 
-<div class="govuk-form-group">
-  <fieldset class="govuk-fieldset">
-      <div class="govuk-!-margin-bottom-2" style="display: flex; align-items: baseline; gap: 10px;">
-        <span class="govuk-fieldset__legend govuk-fieldset__legend--s">Other name 1</span>
-        <p class="govuk-body"><a href="#" class="govuk-link">Remove</a></p>
-      </div>
-    </fieldset>
-    <br>
-    <legend class="govuk-fieldset__legend">
-      Type of name
-    </legend>
-    <div class="govuk-radios" data-module="govuk-radios">
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england" checked>
-        <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
-          Otherwise
-        </label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="scotland">
-        <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
-          Formerly known as
-        </label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="whereDoYouLive-3" name="whereDoYouLive" type="radio" value="wales">
-        <label class="govuk-label govuk-radios__label" for="whereDoYouLive-3">
-          Now
-        </label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="whereDoYouLive-4" name="whereDoYouLive" type="radio" value="northern-ireland">
-        <label class="govuk-label govuk-radios__label" for="whereDoYouLive-4">
-          Afterwards
-        </label>
-      </div>
-    </div>
-  </fieldset>
-</div>
+          <p class="govuk-body  govuk-!-margin-top-4">
+            <a href="#" class="govuk-link">Add prefix or suffix</a>
+          </p>
+        </div>
 
-<div class="govuk-form-group">
-  <label class="govuk-label govuk-label--s" for="deceased-first-name">First name </label>
-  <input class="govuk-input govuk-!-width-one-half" id="deceased-first-name" name="fathersFirstName"
-    type="text" value="Pedro">
-</div>
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset" aria-describedby="name-order-hint">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+              Print order of names
+            </legend>
+            <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
 
-<div class="govuk-form-group">
-  <label class="govuk-label govuk-label--s" for="deceased-middle-name">Middle names</label>
-  <input class="govuk-input govuk-!-width-one-half" id="deceased-middle-name" name="fathersMiddleName"
-    type="text" value="{{data['fathersMiddleName']}}">
-  <!-- <p class="govuk-body">
+              <!-- Default selected: Last name last -->
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="name-order" name="name-order" type="radio"
+                  value="name-order-first-name" checked data-aria-controls="">
+                <label class="govuk-label govuk-radios__label" for="name-order">
+                  Last name last
+                </label>
+              </div>
+
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="name-order-1" name="name-order" type="radio"
+                  value="name-order-last-name" data-aria-controls="">
+                <label class="govuk-label govuk-radios__label" for="name-order-1">
+                  Last name first
+                </label>
+              </div>
+
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="name-order-2" name="name-order" type="radio"
+                  value="name-order-only-last" data-aria-controls="">
+                <label class="govuk-label govuk-radios__label" for="name-order-2">
+                  Last name only
+                </label>
+              </div>
+
+              <!-- Conditional reveal: Other -->
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="name-order-4" name="name-order" type="radio"
+                  value="name-order-other" data-aria-controls="conditional-name-order-other">
+                <label class="govuk-label govuk-radios__label" for="name-order-4">
+                  Other
+                </label>
+              </div>
+
+              <div class="govuk-radios__conditional govuk-radios__conditional--hidden"
+                id="conditional-name-order-other">
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="custom-order">
+                    Order of names
+                  </label>
+                  <input class="govuk-input govuk-!-width-one-half" id="custom-order" name="custom-order" type="text"
+                    value="{{ data['custom-order'] }}">
+                </div>
+              </div>
+
+            </div>
+          </fieldset>
+        </div>
+
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset">
+            <div class="govuk-!-margin-bottom-2" style="display: flex; align-items: baseline; gap: 10px;">
+              <span class="govuk-fieldset__legend govuk-fieldset__legend--s">Other name 1</span>
+              <p class="govuk-body"><a href="#" class="govuk-link">Remove</a></p>
+            </div>
+          </fieldset>
+          <br>
+          <legend class="govuk-fieldset__legend">
+            Type of name
+          </legend>
+          <div class="govuk-radios" data-module="govuk-radios">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="england">
+              <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
+                Otherwise
+              </label>
+            </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio"
+                value="scotland" checked>
+              <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
+                Formerly known as
+              </label>
+            </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="whereDoYouLive-3" name="whereDoYouLive" type="radio" value="wales">
+              <label class="govuk-label govuk-radios__label" for="whereDoYouLive-3">
+                Now
+              </label>
+            </div>
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="whereDoYouLive-4" name="whereDoYouLive" type="radio"
+                value="northern-ireland">
+              <label class="govuk-label govuk-radios__label" for="whereDoYouLive-4">
+                Afterwards
+              </label>
+            </div>
+          </div>
+          </fieldset>
+        </div>
+
+        <div class="govuk-form-group">
+          <label class="govuk-label govuk-label--s" for="deceased-first-name">First name </label>
+          <input class="govuk-input govuk-!-width-one-half" id="deceased-first-name" name="fathersFirstName" type="text"
+            value="Pedro">
+        </div>
+
+        <div class="govuk-form-group">
+          <label class="govuk-label govuk-label--s" for="deceased-middle-name">Middle names</label>
+          <input class="govuk-input govuk-!-width-one-half" id="deceased-middle-name" name="fathersMiddleName"
+            type="text" value="{{data['fathersMiddleName']}}">
+          <!-- <p class="govuk-body">
     <a href="#" class="govuk-link">Add more middle names</a>
   </p> -->
-</div>
+        </div>
 
-<div class="govuk-form-group">
-  <label class="govuk-label govuk-label--s" for="deceased-last-name">Last name</label>
-  <input class="govuk-input govuk-!-width-one-half" id="deceased-last-name" name="fathersLastName"
-    type="text" value="MORA SANCHEZ">
+        <div class="govuk-form-group">
+          <label class="govuk-label govuk-label--s" for="deceased-last-name">Last name</label>
+          <input class="govuk-input govuk-!-width-one-half" id="deceased-last-name" name="fathersLastName" type="text"
+            value="MORA SANCHEZ">
 
-     <p class="govuk-body  govuk-!-margin-top-4">
-    <a href="#" class="govuk-link">Add prefix or suffix</a>
-  </p>
-</div>
+          <p class="govuk-body  govuk-!-margin-top-4">
+            <a href="#" class="govuk-link">Add prefix or suffix</a>
+          </p>
+        </div>
 
-            <div class="govuk-form-group">
-              <fieldset class="govuk-fieldset" aria-describedby="name-order-hint">
-                <!-- <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset" aria-describedby="name-order-hint">
+            <!-- <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                   Other known names (if available)
                 </legend> -->
-                <div class="govuk-form-group">
-                  <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                    Add other names
-                  </button>
-                </div>
-              </fieldset>
+            <div class="govuk-form-group">
+              <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                Add other names
+              </button>
             </div>
+          </fieldset>
+        </div>
 
 
 
-          </div>
-
-       
+      </div>
 
 
 
 
 
 
-          <!-- dont name their child only these show -->
 
-          <!-- <div class="govuk-form-group">
+
+      <!-- dont name their child only these show -->
+
+      <!-- <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Sex</legend>
               <div class="govuk-radios">
@@ -252,7 +220,7 @@ href: "javascript:window.history.back()"
             </fieldset>
           </div> -->
 
-          <!-- <div id="dateOfDeathType_input" class="govuk-form-group">
+      <!-- <div id="dateOfDeathType_input" class="govuk-form-group">
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Is the deceased’s exact date of death
                 known?</legend>
@@ -302,17 +270,16 @@ href: "javascript:window.history.back()"
             </fieldset>
           </div> -->
 
-          <div class="govuk-button-group">
-            {{ govukButton({
-            text: "Save and return",
-            href: "javascript:window.history.back()"
-            }) }}
-          </div>
-
-        </form>
-
+      <div class="govuk-button-group">
+        {{ govukButton({
+        text: "Save and return"
+        }) }}
       </div>
-    </div>
+
+    </form>
+
+  </div>
+</div>
 
 
 
