--- a/app/views/births/multipleBirths/submitChild2/register-page-child2.html
+++ b/app/views/births/multipleBirths/submitChild2/register-page-child2.html
@@ -8,9 +8,9 @@ Select the registrar’s designation – {{ serviceName }} – GOV.UK Prototype 
 
 
 
-  {{ govukBackLink({
-  text: "Back to record",
-  href: "javascript:window.history.back()"
+{{ govukBackLink({
+text: "Back to record",
+href: "javascript:window.history.back()"
 }) }}
 
 
@@ -19,88 +19,87 @@ Select the registrar’s designation – {{ serviceName }} – GOV.UK Prototype 
 {% block content %}
 
 
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-          <span class="govuk-caption-l">Submit the registration</span>
-          <h1 class="govuk-heading-l">
-            Registrar's details  
-          </h1>
-          <form class="form" action="/births/v1/register-page-form" method="post">
-            
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <span class="govuk-caption-l">Submit the registration</span>
+    <h1 class="govuk-heading-l">
+      Registrar's details
+    </h1>
+    <form class="form" action="register-check" method="post">
 
-       <div class="govuk-form-group">
-  <label class="govuk-label govuk-label--s" for="registrar-name">
-    Registrar's full name
-  </label>
-  <input class="govuk-input govuk-!-width-one-half" value="Example name" id="registrar-name" name="registrarName"
-         type="text" value="{{ data['registrarName'] }}">
+
+      <div class="govuk-form-group">
+        <label class="govuk-label govuk-label--s" for="registrar-name">
+          Registrar's full name
+        </label>
+        <input class="govuk-input govuk-!-width-one-half" value="Example name" id="registrar-name" name="registrarName"
+          type="text" value="{{ data['registrarName'] }}">
+      </div>
+
+
+      <div class="govuk-form-group">
+        <fieldset class="govuk-fieldset" aria-describedby="designationSelector-hint">
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+            Select designation
+          </legend>
+
+          <div class="govuk-radios" data-module="govuk-radios">
+            <!-- Option 1: Registrar -->
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="designation-registrar" name="designationSelector" type="radio"
+                value="REGISTRAR">
+              <label class="govuk-label govuk-radios__label" for="designation-registrar">
+                Registrar
+              </label>
+            </div>
+
+            <!-- Option 2: Deputy Registrar -->
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="designation-deputy-registrar" name="designationSelector"
+                type="radio" value="DEPUTY_REGISTRAR">
+              <label class="govuk-label govuk-radios__label" for="designation-deputy-registrar">
+                Deputy registrar
+              </label>
+            </div>
+
+            <!-- Option 3: Interim Registrar -->
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="designation-interim-registrar" name="designationSelector"
+                type="radio" value="INTERIM_REGISTRAR">
+              <label class="govuk-label govuk-radios__label" for="designation-interim-registrar">
+                Interim registrar
+              </label>
+            </div>
+
+            <!-- Option 4: Interim Deputy Registrar -->
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="designation-interim-deputy-registrar" name="designationSelector"
+                type="radio" value="INTERIM_DEPUTY_REGISTRAR">
+              <label class="govuk-label govuk-radios__label" for="designation-interim-deputy-registrar">
+                Interim deputy registrar
+              </label>
+            </div>
+          </div>
+
+
+
+
+
+
+        </fieldset>
+      </div>
+
+      <div class="govuk-button-group">
+        {{ govukButton({
+        text: "Save and return"
+        }) }}
+      </div>
+
+    </form>
+
+  </div>
 </div>
 
-
-<div class="govuk-form-group">
-  <fieldset class="govuk-fieldset" aria-describedby="designationSelector-hint">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-      Select designation
-    </legend>
-
-    <div class="govuk-radios" data-module="govuk-radios">
-      <!-- Option 1: Registrar -->
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="designation-registrar" name="designationSelector"
-               type="radio" value="REGISTRAR">
-        <label class="govuk-label govuk-radios__label" for="designation-registrar">
-          Registrar
-        </label>
-      </div>
-
-      <!-- Option 2: Deputy Registrar -->
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="designation-deputy-registrar" name="designationSelector"
-               type="radio" value="DEPUTY_REGISTRAR">
-        <label class="govuk-label govuk-radios__label" for="designation-deputy-registrar">
-          Deputy registrar
-        </label>
-      </div>
-
-      <!-- Option 3: Interim Registrar -->
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="designation-interim-registrar" name="designationSelector"
-               type="radio" value="INTERIM_REGISTRAR">
-        <label class="govuk-label govuk-radios__label" for="designation-interim-registrar">
-          Interim registrar
-        </label>
-      </div>
-
-      <!-- Option 4: Interim Deputy Registrar -->
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="designation-interim-deputy-registrar" name="designationSelector"
-               type="radio" value="INTERIM_DEPUTY_REGISTRAR">
-        <label class="govuk-label govuk-radios__label" for="designation-interim-deputy-registrar">
-          Interim deputy registrar
-        </label>
-      </div>
-    </div>
-
-
-               
-
-              
-
-              </fieldset>
-            </div>
-  
-            <div class="govuk-button-group">
-              {{ govukButton({
-                text: "Save and return",
-                href: "javascript:window.history.back()"
-              }) }}
-            </div>
-  
-          </form>
-  
-        </div>
-      </div>
-  
 
 
 {% endblock %}
